--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                 <div class="author-text">
                     <span class="subtitle" style="text-align: left;">CONHEÇA O AUTOR</span>
                     <h2>Sobre o autor</h2>
-                    <p>Ele decidiu dar um basta na vida de escassez e buscou conhecimento para entender como o dinheiro realmente funciona. Após anos de estudo e aplicação prática, desenvolveu um método que permite a qualquer pessoa assumir o controle de suas finanças.</p>
-                    <p>Sua missão agora é compartilhar esse conhecimento para que mais pessoas possam viver com tranquilidade e liberdade financeira.</p>
+                    <p>Este guia foi escrito por alguém que estuda ativamente os três pilares que compõem a obra: finanças pessoais, marketing digital e investimentos.</p>
+                    <p>O autor não se apresenta como guru ou especialista infalível. A proposta é diferente: organizar conhecimento complexo de forma prática, conectando áreas que normalmente são tratadas de forma isolada.</p>
                 </div>
             </div>
         </div>
