--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
             .checkout-card { padding: 30px; }
             .price-big { font-size: 3.5rem; }
         }
+        .hero-book {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.hero-book img {
+    width: 420px;
+    max-width: 90%;
+    height: auto;
+    filter: drop-shadow(0 30px 40px rgba(0,0,0,0.25));
+}
     </style>
 </head>
 <body>
@@ -106,6 +117,9 @@
             <h1>O Guia Financeiro</h1>
             <p>Um método prático para quem quer ganhar on-line, investir com inteligência e construir renda passiva.</p>
             <a href="https://pay.kiwify.com.br/UULBMVH" class="btn-main">GARANTIR ACESSO</a>
+            <div class="hero-book">
+    <img src="capa.png" alt="Capa do Guia Financeiro">
+</div>
             <p style="margin-top: 15px; font-weight: 700;"</p>
         </div>
     </section>
